early grad line

--- a/CV.tex
+++ b/CV.tex
@@ -117,9 +117,12 @@
   \resumeSubHeadingListStart
   
     \resumeSubheading
-      {University of Pennsylvania}{May 2025}
+      {University of Pennsylvania}{2022 - May 2025 (expected)}
       {Bachelor of Science And Engineering in Computer Science}{Current GPA: 3.57/4.0}
-      \vspace{3pt}
+
+      \vspace{2pt}
+
+      \scriptsize{Expedited degree, motivated to immerse in long-term, impactful software projects}
 
       
       %\small{
@@ -134,13 +137,14 @@
   \begin{itemize}[leftmargin=0.15in, label={}]
       \small{\item{
       
-      \textbf{Languages}{: JavaScript/TypeScript, Java, Kotlin, Python, C/C++/C\#, Haskell, Ocaml, SQL, HTML, CSS} \\
+      \textbf{Languages}{: JavaScript, TypeScript, Java, Kotlin, Python, C++, C, Haskell, SQL, HTML, CSS, C\#, Svelte} \\
       
       \textbf{Software Tools}{: MATLAB, GCP, AWS, Firebase, Docker, Git, GDB, Selenium}\\
 
-      \textbf{Software Frameworks/Libraries}{: React, Node.js, Express.js, Pytorch, Tensorflow, pandas, NumPy, tRPC, Prisma} \\
+      \textbf{Software Frameworks/Libraries}{: React, Node.js, Express.js, PyTorch, Tensorflow, Pandas, NumPy, tRPC, Prisma} \\
 
-      \textbf{General Skills}{: embedded-programming, full-stack development, system-level programming, customer engagement, source control, CI/CD, product management, version control, linux, powershell, bash, REST, HTTP}
+      \textbf{General Skills}{: embedded-programming, full-stack development, system-level programming, customer engagement,
+      source control, CI/CD, product management, version control (git), Linux, PowerShell, Bash, REST}
       }}
   \end{itemize}
 
@@ -158,12 +162,16 @@
             \resumeItem{Design the platform using \textbf{OpenAI} LLMs for response generation and bot control, \textbf{React.js} for the
             frontend and \textbf{Express} for the backend, with \textbf{Firestore} as the database and \textbf{Firebase} user management 
             and authentication}
-            \resumeItem{Orchestrate deployment on \textbf{GCP}, using \textbf{Docker} and \textbf{Cloud Run}, ensuring \textbf{99.9\% uptime}}
-            \resumeItem{Design a system of independent \textbf{co-existing software versions}, allowing for rapid deployment of new features}
-            \resumeItem{Implement a comprehensive \textbf{Jest} and \textbf{Selenium}-based test suite, \textbf{reducing production bugs by 80\%}}
+            \resumeItem{Orchestrate deployment on \textbf{GCP}, using \textbf{Docker} and \textbf{Cloud Run}, ensuring
+            \textbf{99.9\% uptime}}
+            \resumeItem{Design a system of independent \textbf{co-existing software versions}, allowing for rapid deployment of new
+            features}
+            \resumeItem{Implement a comprehensive \textbf{Jest} and \textbf{Selenium}-based test suite,
+            \textbf{reducing production bugs by 80\%}}
             \resumeItem{Conduct infrastructure load testing to verify the architecture can handle \textbf{10,000 messages per second}}
-            \resumeItem{Publish and maintain an Excel-style \href{https://www.npmjs.com/package/@negotiate-gpt/formulas}{\underline{formulas package}}
-            and a \href{https://www.npmjs.com/package/natural-number-parsing}{\underline{number parsing package}} on \textbf{npm}}
+            \resumeItem{Publish and maintain an Excel-style \href{https://www.npmjs.com/package/@negotiate-gpt/formulas}
+            {\underline{formulas package}} and a \href{https://www.npmjs.com/package/natural-number-parsing}
+            {\underline{number parsing package}} on \textbf{npm}}
           \resumeItemListEnd
           {\textit{Reference and demo available upon request}}{}
 
@@ -171,16 +179,20 @@
           {\textbf{Software Developer Intern} $|$ \footnotesize\emph{CFO4ALL at Penn Venture Lab}}{May 2024 - Sep 2024}
           \resumeItemListStart
             \resumeItem{Worked on a web application to provide CPG companies with cash flow forecasting and insights:}
-            \resumeItem{Set up \textbf{CI/CD} pipeline using \textbf{GitHub Actions} \& \textbf{Docker} to deploy to \textbf{AWS App Runner} \& \textbf{CloudFront};
+            \resumeItem{Set up \textbf{CI/CD} pipeline using \textbf{GitHub Actions} \& \textbf{Docker} to deploy to
+            \textbf{AWS App Runner} \& \textbf{CloudFront};
             reducing deployment time by 90\% and allowing production credentials to be removed from developers' computers}
-            \resumeItem{Designed a scalable time series-tree data structure for financial data; integrated this data structure with backend analysis and frontend visualizations;
+            \resumeItem{Designed a scalable time series-tree data structure for financial data; integrated this data structure with
+            backend analysis and frontend visualizations;
             \textbf{speeding up queries by 70\%}}
-            \resumeItem{Implemented a data ingest pipeline from Quickbooks to a \textbf{PostgreSQL} database on \textbf{Heroku} for customers with \textbf{250,000+ data points};
+            \resumeItem{Implemented a data ingest pipeline from Quickbooks to a \textbf{PostgreSQL} database on \textbf{Heroku} for
+            customers with \textbf{250,000+ data points};
             \textbf{automating the customer onboarding process}}
           \resumeItemListEnd
 
         \resumeProjectHeading
-          {\textbf{Teaching Assistant for Internet and Web Systems} $|$ \footnotesize\emph{University of Pennsylvania}}{Jan 2024 - Present}
+          {\textbf{Teaching Assistant for Internet and Web Systems} $|$ \footnotesize\emph{University of Pennsylvania}}
+          {Jan 2024 - Present}
           \resumeItemListStart
             \vspace{5pt}
             \scriptsize{(MS/PhD Required Class)}
